--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "readline.h": "c"
+        "readline.h": "c",
+        "minishell.h": "c"
     },
     "search.useParentIgnoreFiles": false
 }
