--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "readline.h": "c",
-        "minishell.h": "c"
+        "minishell.h": "c",
+        "libft.h": "c"
     },
     "search.useParentIgnoreFiles": false
 }
